[package]
name = "coingecko_requests"
version = "0.1.0"
authors = ["CODPUD <jalol.kham.2401@gmail.com>", "Nazar Kalinowski <nazark@tutanota.com>", "sumero <sumersky2001@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures = "0.3.13"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
directories = "3.0.1"